less: bump Top-Bar z-index to avoid Carousel clipping

--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -25,7 +25,7 @@
     }
   }
   .left-button {
-    top: 50%; 
+    top: 50%;
     left: 25px;
     transform: translate(0, -50%);
   }
@@ -37,5 +37,7 @@
   img {
     .width-100();
     display: none;
+    transition: opacity 1s;
+    z-index: 0;
   }
 }
