--- a/css/index.css
+++ b/css/index.css
@@ -301,4 +301,6 @@ body {
 .carousel img {
   width: 100%;
   display: none;
+  transition: opacity 1s;
+  z-index: 0;
 }
